stderr
JudgeMan.java:12: error: bad operand type String for unary operator '!'
        if(!ans){
           ^
1 error
